# wallet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: models.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_wallet_label.py  0003_alter_transaction_id_alter_wallet_id.py
api/transactions/: filters.py  serializers.py  views.py
api/wallets/: filters.py  serializers.py  views.py
wallet/: settings.py  urls.py
